Skrevet om til Kotlin og refaktorert kode del 4 (Testklasser + pom.xml)